force-app/main/default/objects/LogicLearn_Settings__c/LogicLearn_Settings__c.object-meta.xml
<CustomObject>
    <label>LogicLearn Setting</label>
    <nameField>
        <label>Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogicLearn Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>