force-app/main/default/objects/LogicLearn_Settings__c/fields/Assignment_In_App_Message__c.field-meta.xml
<CustomField>
    <fullName>Assignment_In_App_Message__c</fullName>
    <label>Assignment In-App Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>