force-app/main/default/objects/LogicLearn_Settings__c/fields/Assignment_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Template_Name__c</fullName>
    <label>Assignment Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>