force-app/main/default/objects/LogicLearn_Settings__c/fields/Completion_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Completion_Threshold__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Default Completion Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>