force-app/main/default/objects/LogicLearn_Settings__c/fields/Document_Completion_Mode__c.field-meta.xml
<CustomField>
    <fullName>Document_Completion_Mode__c</fullName>
    <label>Default Document Completion Mode</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Finish on last page</fullName><default>true</default><label>Finish on last page</label></value><value><fullName>Automatic</fullName><default>false</default><label>Automatic</label></value></valueSetDefinition></valueSet>
</CustomField>