force-app/main/default/objects/LogicLearn_Settings__c/fields/Document_Reading_Order__c.field-meta.xml
<CustomField>
    <fullName>Document_Reading_Order__c</fullName>
    <label>Default Document Reading Order</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>In order</fullName><default>true</default><label>In order</label></value><value><fullName>Any order</fullName><default>false</default><label>Any order</label></value></valueSetDefinition></valueSet>
</CustomField>