force-app/main/default/objects/LogicLearn_Settings__c/fields/First_Publish_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>First_Publish_Email_Template__c</fullName>
    <label>First Publish Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>