force-app/main/default/objects/LogicLearn_Settings__c/fields/First_Publish_In_App_Message__c.field-meta.xml
<CustomField>
    <fullName>First_Publish_In_App_Message__c</fullName>
    <label>First Publish In-App Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>