force-app/main/default/objects/LogicLearn_Settings__c/fields/Prevent_Skipping__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Skipping__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prevent Skipping by Default</label>
    <type>Checkbox</type>
</CustomField>