force-app/main/default/objects/LogicLearn_Settings__c/fields/Reminder_In_App_Message__c.field-meta.xml
<CustomField>
    <fullName>Reminder_In_App_Message__c</fullName>
    <label>Reminder In-App Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>