force-app/main/default/objects/LogicLearn_Settings__c/fields/Reminder_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Template_Name__c</fullName>
    <label>Reminder Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>