force-app/main/default/objects/LogicLearn_Settings__c/fields/Required_Update_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Required_Update_Email_Template__c</fullName>
    <label>Required Update Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>