force-app/main/default/objects/LogicLearn_Settings__c/fields/Required_Update_In_App_Message__c.field-meta.xml
<CustomField>
    <fullName>Required_Update_In_App_Message__c</fullName>
    <label>Required Update In-App Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>