force-app/main/default/objects/LogicLearn_Settings__c/fields/Update_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Update_Email_Template__c</fullName>
    <label>Update Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>